pom.xml updated

--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.build.outputEncoding>UTF-8</project.build.outputEncoding>
         <maven.compiler.release>16</maven.compiler.release>
-        <exec.mainClass>Main</exec.mainClass>
+        <exec.mainClass>boardgame.Main</exec.mainClass>
         <junit.jupiter.version>5.7.1</junit.jupiter.version>
         <javafx.version>16</javafx.version>
     </properties>
