--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <groupId>hu.unideb.inf</groupId>
     <artifactId>swe-2021-assignment</artifactId>
     <version>1.0</version>
+    <packaging>jar</packaging>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -24,6 +25,7 @@
         <exec.mainClass>boardgame.Main</exec.mainClass>
         <junit.jupiter.version>5.7.1</junit.jupiter.version>
         <javafx.version>16</javafx.version>
+        <tinylog.version>2.3.1</tinylog.version>
     </properties>
 
     <dependencies>
@@ -51,6 +53,18 @@
             <version>${junit.jupiter.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.tinylog</groupId>
+            <artifactId>tinylog-api</artifactId>
+            <version>${tinylog.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.tinylog</groupId>
+            <artifactId>tinylog-impl</artifactId>
+            <version>${tinylog.version}</version>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -60,8 +74,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>15</source>
-                    <target>15</target>
+                    <source>16</source>
+                    <target>16</target>
                 </configuration>
             </plugin>
             <plugin>
